--- a/src/contact.pcss
+++ b/src/contact.pcss
@@ -2,14 +2,38 @@
 #box_contact {
   float: left;
   width: 100vw;
-  padding: 80px 0 0;
+  @media (--mobile) {
+    padding: 80px 0;
+  }
+  @media (--tabletport) {
+    padding: 80px 0 0;
+  }
   .box {
-    lost-column: 1/2;
+    @media (--mobile) {
+      lost-column: 1/1;
+    }
+    @media (--tabletport) {
+      lost-column: 1/2;
+    }
   }
   .info {
     float: left;
-    width: calc(100% - 70px);
-    margin: 0 0 0 70px;
+    @media (--mobile) {
+      width: 100%;
+      margin: 0;
+    }
+    @media (--tabletport) {
+      width: calc(100% - 30px);
+      margin: 0 0 0 30px;
+    }
+    @media (--tabletland) {
+      width: calc(100% - 50px);
+      margin: 0 0 0 50px;
+    }
+    @media (--desktop) {
+      width: calc(100% - 70px);
+      margin: 0 0 0 70px;
+    }
   }
   .result {
     float: left;
@@ -39,12 +63,32 @@
   }
   form {
     float: left;
-    width: calc(100% - 60px);
-    margin: 60px 0 -80px;
-    padding: 30px;
     background: var(--blanco);
     position: relative;
     z-index: 1;
+    @media (--mobile) {
+      width: 100%;
+      padding: 0;
+      margin: 0;
+    }
+    @media (--tabletport) {
+      width: calc(100% - 60px);
+      padding: 30px;
+      margin: 50px 0 -60px;
+    }
+    @media (--tabletland) {
+      width: calc(100% - 60px);
+      padding: 30px;
+      margin: 60px 0 -80px;
+    }
+    .box {
+      @media (--mobile) {
+        lost-column: 1/1;
+      }
+      @media (--tabletland) {
+        lost-column: 1/2;
+      }
+    }
     .box_input {
       margin: 0 0 30px;
     }
