--- a/src/general.pcss
+++ b/src/general.pcss
@@ -1126,6 +1126,7 @@ img {
     letter-spacing: 0;
     background: none;
     border: 1px solid var(--blanco);
+    border-radius: 0;
     outline: 0;
     @media (--mobile) {
       width: calc(100% - 20px - 2px);
