--- a/src/terms_and_conditions.pcss
+++ b/src/terms_and_conditions.pcss
@@ -3,6 +3,22 @@
   float: left;
   width: 100vw;
   margin: 80px 0;
+  position: relative;
+  i {
+    opacity: 0.1;
+    position: absolute;
+    z-index: -1;
+    &:nth-child(1) {
+      width: 400px;
+      left: 0;
+      top: 16%;
+    }
+    &:nth-child(2) {
+      width: 600px;
+      right: 0;
+      bottom: 16%;
+    }
+  }
   .full_info {
     float: left;
     width: 100%;
