--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,4 @@
 @import "shipping_and_insurance.pcss";
 @import "contact.pcss";
 @import "terms_and_conditions.pcss";
+@import "user_dashboard.pcss";
