--- a/src/user_dashboard.pcss
+++ b/src/user_dashboard.pcss
@@ -4,7 +4,12 @@
   width: 100vw;
   padding: 80px 0;
   .box_user {
-    lost-column: 8/12;
+    @media (--mobile) {
+      lost-column: 1/1;
+    }
+    @media (--tabletland) {
+      lost-column: 8/12;
+    }
   }
   .general_box {
     float: left;
@@ -22,9 +27,20 @@
       width: 100%;
       padding: 0 0 10px;
       border-bottom: 1px solid var(--dorado);
+      @media (--mobile) {
+        display: none;
+      }
+      @media (--tabletport) {
+        display: block;
+      }
     }
     .box {
-      lost-column: 1/5;
+      @media (--mobile) {
+        lost-column: 1/1;
+      }
+      @media (--tabletport) {
+        lost-column: 1/5;
+      }
     }
     .tittle {
       font-weight: var(--black);
