Front-dev User Account.

--- a/src/user_dashboard.pcss
+++ b/src/user_dashboard.pcss
@@ -84,5 +84,27 @@
       width: 100%;
     }
   }
+  .box_form {
+    float: left;
+    width: 100%;
+    margin: 20px 0 0;
+  }
+  .box_input {
+    margin-bottom: 20px;
+    @media (--mobile) {
+      lost-column: 1/1;
+    }
+    @media (--tabletport) {
+      lost-column: 1/2;
+    }
+  }
+  .btn_small {
+    @media (--mobile) {
+      width: 100%;
+    }
+    @media (--tabletport) {
+      width: 270px;
+    }
+  }
 }
 /* END USER DASHBOARD */
