Front-dev thanks page.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -422,6 +422,10 @@ h2 {
       line-height: 32px;
     }
   }
+  &.margin {
+    padding: 0 0 20px;
+    border-bottom: 1px solid var(--dorado);
+  }
 }
 h3 {
   float: left;
