--- a/src/checkout.pcss
+++ b/src/checkout.pcss
@@ -275,4 +275,63 @@
     width: 270px;
   }
 }
+#box_order_result {
+  float: left;
+  width: 100%;
+  margin: 60px 0;
+  .top {
+    float: left;
+    width: 100%;
+    padding: 10px 0;
+    border-bottom: 1px solid var(--negro);
+  }
+  .box {
+    lost-column: 1/3;
+  }
+  .result {
+    float: left;
+    width: 100%;
+    padding: 15px 0;
+    border-bottom: 1px solid var(--grisclaro);
+    &:last-child {
+      border-bottom: 0 none;
+    }
+  }
+  h4 {
+    border-bottom: 1px solid var(--negro);
+  }
+  b {
+    float: left;
+    width: 100%;
+    color: var(--dorado);
+    @media (--mobile) {
+      font-size: 16px;
+      line-height: 26px;
+    }
+    @media (--tabletport) {
+      font-size: 14px;
+      line-height: 24px;
+    }
+    @media (--tabletland) {
+      font-size: 15px;
+      line-height: 25px;
+    }
+    @media (--desktop) {
+      font-size: 16px;
+      line-height: 26px;
+    }
+  }
+}
+#box_custom_detail,
+#box_thanks_adress{
+  float: left;
+  width: 100%;
+  margin: 0 0 60px;
+  .box {
+    lost-column: 1/2;
+  }
+  h4 {
+    margin: 0 0 15px;
+  }
+}
 /* END CHECKOUT */
