--- a/src/checkout.pcss
+++ b/src/checkout.pcss
@@ -328,7 +328,12 @@
   width: 100%;
   margin: 0 0 60px;
   .box {
-    lost-column: 1/2;
+    @media (--mobile) {
+      lost-column: 1/1;
+    }
+    @media (--tabletport) {
+      lost-column: 1/2;
+    }
   }
   h4 {
     margin: 0 0 15px;
