--- a/src/single.pcss
+++ b/src/single.pcss
@@ -76,15 +76,7 @@
     float: left;
     width: 100%;
     position: relative;
-    @media (--mobile) {
-      margin: 0;
-    }
-    @media (--tabletport) {
-      margin: 0 0 -20px;
-    }
-    @media (--desktop) {
-      margin: 0 0 -30px;
-    }
+    margin: 0;
   }
   .box_actions {
     float: left;
@@ -92,17 +84,47 @@
     position: relative;
     z-index: 50;
     .box {
-      @media (--mobile) {
-        lost-column: 1/1;
+      &:nth-child(1) {
+        @media (--mobile) {
+          lost-column: 1/1;
+        }
+        @media (--tabletport) {
+          lost-column: 1/6;
+        }
+        @media (--tabletland) {
+          lost-column: 1/3 2;
+        }
+        @media (--desktop) {
+          lost-column: 1/6;
+        }
       }
-      @media (--tabletport) {
-        lost-column: 1/3;
+      &:nth-child(2) {
+        @media (--mobile) {
+          lost-column: 1/1;
+        }
+        @media (--tabletport) {
+          lost-column: 2/6;
+        }
+        @media (--tabletland) {
+          lost-column: 2/3 2;
+        }
+        @media (--desktop) {
+          lost-column: 3/6;
+        }
       }
-      @media (--tabletland) {
-        lost-column: 1/2;
-      }
-      @media (--desktop) {
-        lost-column: 1/3;
+      &:nth-child(3) {
+        @media (--mobile) {
+          lost-column: 1/1;
+        }
+        @media (--tabletport) {
+          lost-column: 3/6;
+        }
+        @media (--tabletland) {
+          lost-column: 1/1;
+        }
+        @media (--desktop) {
+          lost-column: 2/6;
+        }
       }
       h5 {
         line-height: 0.8;
@@ -139,6 +161,22 @@
       }
       @media (--desktop) {
         font-size: 36px;
+      }
+      span {
+        color: var(--gris);
+        font-weight: var(--regular);
+        @media (--mobile) {
+          font-size: 22px;
+        }
+        @media (--tabletport) {
+          font-size: 24px;
+        }
+        @media (--tabletland) {
+          font-size: 26px;
+        }
+        @media (--desktop) {
+          font-size: 28px;
+        }
       }
     }
     input {
