Incorporamos stock en single page.

--- a/src/single.pcss
+++ b/src/single.pcss
@@ -178,6 +178,11 @@
           font-size: 28px;
         }
       }
+      .stock {
+        font-size: 15px;
+        color: #A43517;
+        display: inline-block;
+      }
     }
     input {
       float: left;
