Modificamos estilos de header y banner principal, home.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -281,7 +281,7 @@ nav {
       }
     }
     &.active {
-      color: var(--dorado);
+      color: var(--crema);
       &:before {
         width: 100%;
       }
@@ -600,7 +600,7 @@ img {
     width: 200px;
   }
   @media (--desktop) {
-    width: 228px;
+    width: 330px;
   }
   &:hover {
     @media (--tabletland) {
