--- a/src/home.pcss
+++ b/src/home.pcss
@@ -118,8 +118,8 @@
 }
 #banner_home {
   float: left;
-  width: 100vw;@mixin MarginTopSection {};
-
+  width: 100vw;
+  @mixin MarginTopSection {};
   .slide {
     float: left;
     width: 100%;
@@ -248,7 +248,7 @@
       float: left;
       width: 100%;
       font-weight: var(--regular);
-      color: #EBD3AB;
+      color: var(--crema);
       letter-spacing: 0;
       @media (--mobile) {
         font-size: 14px;
@@ -282,7 +282,7 @@
     width: 100%;
     font-family: var(--font2);
     font-weight: var(--bold);
-    color: var(--naranja);
+    color: var(--blanco);
     letter-spacing: 0;
     text-shadow: 2px 2px 5px #000000 , 5px 5px 10px #000000 , 15px 15px 30px #000000;
     line-height: 1;
@@ -303,7 +303,7 @@
     float: left;
     width: 100%;
     font-family: var(--font2);
-    font-family: var(--regular);
+    font-weight: var(--light);
     font-style: italic;
     color: var(--blanco);
     letter-spacing: 0;
@@ -313,13 +313,13 @@
       font-size: 35px;
     }
     @media (--tabletport) {
-      font-size: 40px;
+      font-size: 41px;
     }
     @media (--tabletland) {
-      font-size: 48px;
+      font-size: 43px;
     }
     @media (--desktop) {
-      font-size: 60px;
+      font-size: 45px;
     }
   }
 }
