--- a/src/variables.pcss
+++ b/src/variables.pcss
@@ -1,27 +1,24 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Oswald:300,400,500,600,700|Playfair+Display:400,400i,700,700i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700|Roboto:100,300,400,500,700,900');
 
 :root {
-  --font1: 'Lato', sans-serif;
-  --font2: 'Playfair Display', serif;
+  --font1: 'Roboto', sans-serif;
+  --font2: 'Roboto Slab', serif;
   --font3: 'Oswald', sans-serif;
 
   --light: 300;
   --regular: 400;
-  --regulari: 400i;
   --medium: 500;
   --semibold: 600;
   --bold: 700;
-  --boldi: 700i;
   --black: 900;
-  --blacki: 900i;
 
   --blanco: #ffffff;
   --grisclaro: #EEEEEE;
   --grismedio: #BBBBBB;
   --gris: #898989;
   --negro: #231F20;
-  --dorado: #CE922E;
-  --crema: #F0D2A3;
+  --dorado: #7A1E47;
+  --crema: #CC99B2;
   --naranja: #EE9800;
   --none: none;
   --border: #504B4B;
@@ -46,7 +43,7 @@
     margin: 274px 0 0;
   }
   @media (--desktop) {
-    margin: 299px 0 0;
+    margin: 217px 0 0;
   }
 }
 
