Incorporamos tipografía faltante. Ajustes de diseño sobre productos destacados, home.

--- a/src/home.pcss
+++ b/src/home.pcss
@@ -460,7 +460,7 @@
       width: 100%;
       font-family: var(--font3);
       font-weight: var(--medium);
-      color: var(--dorado);
+      color: var(--violeta);
       letter-spacing: 0;
       text-transform: uppercase;
       @media (--mobile) {
@@ -477,7 +477,7 @@
       float: left;
       width: 100%;
       font-family: var(--font3);
-      font-weight: var(--medium);
+      font-weight: var(--bold);
       color: var(--negro);
       letter-spacing: 0;
       @media (--mobile) {
@@ -514,7 +514,7 @@
     .save {
       float: left;
       font-family: var(--font3);
-      font-weight: var(--light);
+      font-weight: var(--regular);
       color: var(--negro);
       letter-spacing: 0;
       text-transform: uppercase;
@@ -534,9 +534,9 @@
       float: left;
       clear: both;
       font-family: var(--font3);
-      font-weight: var(--medium);
-      color: var(--dorado);
-      letter-spacing: 0;
+      font-weight: var(--bold);
+      color: var(--violeta);
+      letter-spacing: -2;
       line-height: 0.8;
       @media (--mobile) {
         font-size: 28px;
@@ -601,12 +601,12 @@
       padding: 0 10px;
     }
     @media (--tabletland) {
-      font-size: 19px;
+      font-size: 18px;
       width: calc(100% - 40px);
       padding: 0 20px;
     }
     @media (--desktop) {
-      font-size: 21px;
+      font-size: 19px;
     }
   }
 }
