--- a/src/variables.pcss
+++ b/src/variables.pcss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700|Roboto:100,300,400,500,700,900');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Roboto+Slab:100,300,400,700|Roboto:100,300,400,500,700,900');
 
 :root {
   --font1: 'Roboto', sans-serif;
   --font2: 'Roboto Slab', serif;
-  --font3: 'Oswald', sans-serif;
+  --font3: 'Roboto Condensed', sans-serif;
 
   --light: 300;
   --regular: 400;
@@ -22,6 +22,9 @@
   --naranja: #EE9800;
   --none: none;
   --border: #504B4B;
+
+  --violetamedio: #993366;
+  --violeta: #7A1E47;
 
   --animacion: all 0.3s ease-in-out;
 }
