--- a/src/general.pcss
+++ b/src/general.pcss
@@ -1010,7 +1010,7 @@ img {
   font-family: var(--font2);
   font-weight: var(--regular);
   line-height: 0.8;
-  color: var(--naranja);
+  color: var(--violeta);
   letter-spacing: 0;
   text-align: center;
   position: relative;
@@ -1060,7 +1060,7 @@ img {
     float: left;
     width: 100%;
     height: 1px;
-    background: var(--naranja);
+    background: var(--violeta);
     margin: 0 0 15px;
   }
   &:after {
@@ -1069,7 +1069,7 @@ img {
     float: left;
     width: 100%;
     height: 1px;
-    background: var(--naranja);
+    background: var(--violeta);
     margin: 20px 0 0;
   }
 }
