Ajustes de diseño sobre listado de productos, home.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -886,12 +886,12 @@ img {
   cursor: pointer;
   float: left;
   font-family: var(--font3);
-  font-weight: var(--regular);
+  font-weight: var(--bold);
   line-height: 0.8;
   color: var(--blanco);
   letter-spacing: 0;
   text-align: center;
-  background: var(--naranja);
+  background: var(--violeta);
   border: 0 none;
   text-transform: uppercase;
   text-decoration: none;
