--- a/src/home.pcss
+++ b/src/home.pcss
@@ -674,7 +674,7 @@
     width: 100%;
     text-align: center;
     font-family: var(--font3);
-    font-weight: var(--medium);
+    font-weight: var(--bold);
     color: var(--negro);
     letter-spacing: 0;
     text-align: center;
@@ -708,7 +708,7 @@
     float: left;
     width: 100%;
     height: 1px;
-    background: var(--dorado);
+    background: var(--violeta);
     margin: 10px 0;
   }
   .price {
@@ -717,7 +717,7 @@
     text-align: center;
     font-family: var(--font3);
     font-weight: var(--bold);
-    color: var(--dorado);
+    color: var(--violeta);
     letter-spacing: 0;
     text-align: center;
     line-height: 0.8;
