Ajustes de diseño sobre formulario de noticias y footer.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -153,7 +153,7 @@ footer {
   .legal {
     float: left;
     width: 100%;
-    font-family: var(--font3);
+    font-family: var(--font2);
     font-weight: var(--light);
     color: var(--negro);
     letter-spacing: 0;
@@ -510,7 +510,7 @@ h6 {
   margin: 0 0 10px;
   text-align: left;
   font-family: var(--font3);
-  font-weight: var(--regular);
+  font-weight: var(--bold);
   color: var(--dorado);
   letter-spacing: 0;
   border-bottom: 1px solid var(--dorado);
@@ -917,7 +917,7 @@ img {
   &:hover {
     @media (--tabletland) {
       background: var(--negro);
-      color: var(--naranja);
+      color: var(--violeta);
     }
   }
 }
@@ -926,13 +926,13 @@ img {
   cursor: pointer;
   float: left;
   font-family: var(--font3);
-  font-weight: var(--regular);
+  font-weight: var(--bold);
   line-height: 0.8;
   color: var(--blanco);
   letter-spacing: 0;
   text-align: center;
-  background: var(--naranja);
-  border: 1px solid var(--naranja);
+  background: var(--violeta);
+  border: 1px solid var(--violeta);
   text-transform: uppercase;
   text-decoration: none;
   transition: var(--animacion);
@@ -958,7 +958,7 @@ img {
   &:hover {
     @media (--tabletland) {
       background: var(--negro);
-      color: var(--naranja);
+      color: var(--violetaclaro);
     }
   }
   &.dorado {
@@ -1091,7 +1091,7 @@ img {
   p {
     float: left;
     font-family: var(--font3);
-    font-weight: var(--regular);
+    font-weight: var(--bold);
     color: var(--blanco);
     letter-spacing: 0;
     padding: 0;
@@ -1113,7 +1113,7 @@ img {
     }
     @media (--desktop) {
       font-size: 22px;
-      margin: 1px 20px 0 0;
+      margin: 7px 20px 0 0;
     }
   }
   form {
@@ -1138,23 +1138,23 @@ img {
     @media (--mobile) {
       width: calc(100% - 20px - 2px);
       margin: 0 0 10px;
-      padding: 5px 10px 8px;
+      padding: 9px 10px 8px;
       font-size: 16px;
     }
     @media (--tabletport) {
       width: 200px;
       margin: 0 20px 0 0;
-      padding: 5px 10px 8px;
+      padding: 9px 10px 8px;
       font-size: 17px;
     }
     @media (--tabletland) {
       width: 300px;
-      padding: 5px 15px 8px;
+      padding: 9px 15px 8px;
       font-size: 18px;
     }
     @media (--desktop) {
       width: 370px;
-      padding: 5px 20px 8px;
+      padding: 9px 20px 8px;
     }
     &::placeholder {
       font-family: var(--font3);
