Adaptación responsive con ajustes de diseño necesarios, home.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -590,14 +590,14 @@ img {
   transition: var(--animacion);
   @media (--mobile) {
     float: left;
-    width: 100px;
+    width: 150px;
   }
   @media (--tabletport) {
-    width: 170px;
+    width: 200px;
   }
   @media (--tabletland) {
     float: none;
-    width: 200px;
+    width: 250px;
   }
   @media (--desktop) {
     width: 330px;
@@ -669,7 +669,7 @@ img {
     float: left;
     width: 100%;
     height: 1px;
-    background: var(--dorado);
+    background: var(--violetaclaro);
     margin: 0 0 6px;
     transition: var(--animacion);
     &:last-child {
