--- a/src/home.pcss
+++ b/src/home.pcss
@@ -31,7 +31,7 @@
     }
     @media (--tabletport) {
       max-width: calc(100% / 3) !important;
-      border-right: 1px solid #DCB26D;
+      border-right: 1px solid var(--violetaclaro);
       margin: 0 30px 0 0 !important;
     }
     @media (--tabletland) {
