Ajustes de estilos para Login y Register.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -386,7 +386,7 @@ h1 {
 h2 {
   font-family: var(--font2);
   font-weight: var(--bold);
-  color: var(--dorado);
+  color: var(--violetamedio);
   letter-spacing: 0;
   padding: 0;
   @media (--mobile) {
@@ -992,7 +992,7 @@ img {
   }
 }
 .btn_small_line {
-  @mixin BtnSmallBorder var(--naranja) , var(--none) , var(--naranja) {};
+  @mixin BtnSmallBorder var(--violetaclaro) , var(--none) , var(--violetaclaro) {};
   &.dorado {
     background: var(--dorado);
     border: 1px solid var(--dorado);
