--- a/src/single.pcss
+++ b/src/single.pcss
@@ -146,7 +146,7 @@
       float: left;
       width: 100%;
       font-weight: var(--black);
-      color: var(--naranja);
+      color: var(--violetaclaro);
       letter-spacing: 0;
       line-height: 0.8;
       margin: 0 0 15px;
@@ -229,6 +229,7 @@
       }
     }
     .btn {
+      width: 100%;
       @media (--mobile) {
         margin: 0 0 20px;
       }
@@ -378,7 +379,7 @@
   .comp {
     float: left;
     width: 100%;
-    font-weight: var(--regular);
+    font-weight: var(--bold);
     color: var(--grismedio);
     letter-spacing: 0;
     line-height: 0.8;
@@ -459,8 +460,8 @@
   }
   .tittle {
     font-family: var(--font3);
-    font-weight: var(--regular);
-    color: var(--naranja);
+    font-weight: var(--bold);
+    color: var(--violetaclaro);
     letter-spacing: 0;
     line-height: 0.8;
     @media (--mobile) {
@@ -516,6 +517,7 @@
     float: left;
     width: 100%;
     .btn_medium {
+      border: 0 none;
       @media (--mobile) {
         width: 100%;
         margin: 0;
@@ -541,10 +543,11 @@
     label {
       float: left;
       width: 100%;
-      font-weight: var(--regular);
+      font-weight: var(--bold);
       color: var(--grismedio);
       letter-spacing: 0;
       line-height: 0.8;
+      margin: 0;
       @media (--mobile) {
         font-size: 13px;
       }
@@ -602,7 +605,7 @@
     .name {
       float: left;
       font-weight: var(--black);
-      color: var(--dorado);
+      color: var(--violetaclaro);
       letter-spacing: 0;
       margin: 0 10px 0 0;
       @media (--mobile) {
