Ajustes responsive en single page.

--- a/src/single.pcss
+++ b/src/single.pcss
@@ -522,9 +522,11 @@
         width: 100%;
         margin: 0;
       }
+      @media (--tabletport) {
+        margin: 0 0 -20px;
+      }
       @media (--tabletland) {
         width: 170px;
-        margin: 0 0 -20px;
       }
     }
   }
