Ajustes responsive sobre checkout.

--- a/src/variables.pcss
+++ b/src/variables.pcss
@@ -191,7 +191,7 @@
   }
   &:focus {
     color: var(--negro);
-    border-bottom: 1px solid var(--naranja);
+    border-bottom: 1px solid var(--violeta);
     &::placeholder {
       color: var(--negro);
     }
