--- a/src/checkout.pcss
+++ b/src/checkout.pcss
@@ -137,7 +137,7 @@
     &:hover {
       @media (--tabletland) {
         color: var(--negro);
-        border-bottom: 1px solid var(--naranja);
+        border-bottom: 1px solid var(--violeta);
       }
     }
     &.active {
