Ajustes responsive sobre tnks page.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -395,17 +395,17 @@ h2 {
     margin: 0 0 10px;
   }
   @media (--tabletport) {
-    font-size: 35px;
-    line-height: 35px;
+    font-size: 32px;
+    line-height: 32px;
   }
   @media (--tabletland) {
-    font-size: 38px;
-    line-height: 38px;
+    font-size: 35px;
+    line-height: 35px;
     margin: 0 0 13px;
   }
   @media (--desktop) {
-    font-size: 42px;
-    line-height: 42px;
+    font-size: 38px;
+    line-height: 38px;
     margin: 0 0 15px;
   }
   &.small {
@@ -460,7 +460,7 @@ h4 {
   float: left;
   width: 100%;
   font-family: var(--font2);
-  font-weight: var(--regular);
+  font-weight: var(--bold);
   line-height: 0.8;
   color: var(--dorado);
   letter-spacing: 0;
