Ajustes de diseño en About Us.

--- a/src/about_us.pcss
+++ b/src/about_us.pcss
@@ -76,7 +76,7 @@
 #box_about_pics {
   float: left;
   width: 100vw;
-  background: var(--dorado);
+  background: var(--violetaclaro);
   @media (--mobile) {
     margin: 0;
   }
@@ -146,6 +146,13 @@
       }
     }
   }
+  .tittle_center {
+    color: var(--violetamedio);
+    &:before,
+    &:after {
+      background: var(--violetamedio);
+    }
+  }
 }
 .full_result_delivery {
   float: left;
@@ -185,7 +192,7 @@
   .box_world {
     float: left;
     width: 100%;
-    background: var(--dorado);
+    background: var(--violetamedio);
     font-family: var(--font3);
     font-weight: var(--medium);
     color: var(--blanco);
@@ -239,7 +246,7 @@
     width: 100%;
     font-family: var(--font3);
     font-weight: var(--medium);
-    color: var(--dorado);
+    color: var(--violetamedio);
     letter-spacxing: 0;
     padding: 15px 0;
     text-align: center !important;
@@ -250,7 +257,7 @@
     width: 100%;
     font-family: var(--font3);
     font-weight: var(--medium);
-    color: var(--dorado);
+    color: var(--violetamedio);
     letter-spacing: 0;
     @mixin TextAboutUs {};
   }
