Ajustes responsive, Shipping & Insurance.

--- a/src/shipping_and_insurance.pcss
+++ b/src/shipping_and_insurance.pcss
@@ -19,7 +19,7 @@
     float: left;
     width: calc(100% - 20px);
     padding: 10px;
-    background: #CE922E;
+    background: var(--violeta);
     box-shadow: 5px 5px 10px 0 rgba(0,0,0,0.40);
     border-radius: 5px;
     transition: var(--animacion);
